--- a/My_Slave/Jenkinsfile
+++ b/My_Slave/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         }
         stage('Pull from Docker') {
           steps {
-               dir('Lab_jenkins_dockercompose') { // change directory to Lab_docker_Jenkins
+               dir('week10') { // change directory to Lab_docker_Jenkins
                     echo "Pull . ."
                     sh "docker-compose pull"
                 }
@@ -25,7 +25,7 @@ pipeline {
         }
         stage('Start stage') {
             steps {
-                dir('Lab_jenkins_dockercompose') { // change directory to Lab_docker_Jenkins
+                dir('week10') { // change directory to Lab_docker_Jenkins
                     echo "Start . ."
                     sh "docker-compose up -d"
                 }
